[package]
name = "socks5-rs"
version = "0.2.0"
authors = ["wangyuntao <wyt.daily@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { git = "https://github.com/tokio-rs/mio.git" }
net2 = "0.2"
slab = "0.4.2"
